--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
-      <img src="logolipidbilayer.png" alt="Logo">
+      <img src="images/logolipidbilayer56.png" alt="Logo">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
