change index movie -> photo

--- a/design.html
+++ b/design.html
@@ -37,10 +37,10 @@
 <div id="header"></div>
 <div id="container">
     <aside id="illustrations-area">
-        <section class="illustrations" id="illustrations">
+        <!-- <section class="illustrations" id="illustrations">
             <video autoplay loop muted preload="metadata" src="/movies/kannsei.mp4" class="container-fluid">
-        </section>
-    </aside>
+        </section> -->
+    </aside> 
     <main id="main-area">
         <section class="scroll-point" id="area-1">
             <h2>Aptamer</h2>
