--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 <div id="header"></div>
 
 <body>
-<video autoplay loop muted preload="metadata" src="/movies/kannsei-コピー.mpeg"></video>
+<div class="index_photo">
+    <img src="images/aptamer2.png">
+</div>
+<!-- <video autoplay loop muted preload="metadata" src="/movies/kannsei-コピー.mpeg"></video> -->
 <main>
     <h2>Abstract</h2>
     <p>Biofilm is prevented by disturbing quorum sensing.<br>
