--- a/elsi.html
+++ b/elsi.html
@@ -32,6 +32,19 @@
 
 <body>
 <div id="header"></div>
+<div class="container elsi_card">
+    <div class="row">
+      <div class="col">
+        <h3>Where</h2>
+      </div>
+      <div class="col">
+        <h3>Who</h2>
+      </div>
+      <div class="col">
+        <h3>Concerns</h2>
+      </div>
+    </div>
+  </div>
 <div id="container">
     <main id="main-area">
         <section class="scroll-point" id="area-1">
