--- a/team.html
+++ b/team.html
@@ -93,9 +93,9 @@
             </div>
         </div>
         <div class="col">
-            Name:<br>
-            Role:<br>
-            University:<br>
+            Name:Miki Kariya<br>
+            Role:Leader, robot design<br>
+            University:Nara Institute of Science s<br>
             Major:<br>
         </div>
     </div>
