--- a/team.html
+++ b/team.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="BIOMOD 2022 website">
@@ -25,121 +26,122 @@
 </div>
 <div class="team_intro container">
     <h1>Students</h1>
-<div class="container kakomi-box3">
-    <div class="row">
-        <div class="col">
-            <div class="indvidual_photo">
-                <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+    <div class="container kakomi-box3">
+        <div class="row">
+            <div class="col">
+                <div class="indvidual_photo">
+                    <img src="images/photo_Kariya-san30.png" class="img-fluid">
+                </div>
             </div>
-        </div>
-        <div class="col">
-            Name:<br>
-            Role:<br>
-            University:<br>
-            Major:<br>
-        </div>
-    </div>
-</div>
-<div class="container kakomi-box3">
-    <div class="row">
-        <div class="col">
-            Name:<br>
-            Role:<br>
-            University:<br>
-            Major:<br>
-        </div>
-        <div class="col">
-            <div class="indvidual_photo">
-                <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+            <div class="col">
+                Name: Miki Kariya<br>
+                Role: Leader, Robot design<br>
+                University: Nara Institute of Science and Technology<br>
+                Major:<br>
             </div>
         </div>
     </div>
-</div>
-<div class="container kakomi-box3">
-    <div class="row">
-        <div class="col">
-            <div class="indvidual_photo">
-                <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+    <div class="container kakomi-box3">
+        <div class="row">
+            <div class="col">
+                Name: Takumi Nishida<br>
+                Role:Experiment<br>
+                University:Kansai University<br>
+                Major:<br>
             </div>
-        </div>
-        <div class="col">
-            Name:<br>
-            Role:<br>
-            University:<br>
-            Major:<br>
-        </div>
-    </div>
-</div>
-<div class="container kakomi-box3">
-    <div class="row">
-        <div class="col">
-            Name:<br>
-            Role:<br>
-            University:<br>
-            Major:<br>
-        </div>
-        <div class="col">
-            <div class="indvidual_photo">
-                <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+            <div class="col">
+                <div class="indvidual_photo">
+                    <img src="images/photo_Nishida-san.jpg" class="img-fluid">
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="container kakomi-box3">
-    <div class="row">
-        <div class="col">
-            <div class="indvidual_photo">
-                <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+    <div class="container kakomi-box3">
+        <div class="row">
+            <div class="col">
+                <div class="indvidual_photo">
+                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+                </div>
             </div>
-        </div>
-        <div class="col">
-            Name:Miki Kariya<br>
-            Role:Leader, robot design<br>
-            University:Nara Institute of Science s<br>
-            Major:<br>
-        </div>
-    </div>
-</div>
-<div class="container kakomi-box3">
-    <div class="row">
-        <div class="col">
-            Name:<br>
-            Role:<br>
-            University:<br>
-            Major:<br>
-        </div>
-        <div class="col">
-            <div class="indvidual_photo">
-                <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+            <div class="col">
+                Name:<br>
+                Role:<br>
+                University:<br>
+                Major:<br>
             </div>
         </div>
     </div>
-</div>
-<h1>Instructers</h1>
-<div class="container kakomi-box3">
-    <div class="row">
-        <div class="col">
-            <div class="indvidual_photo">
-                <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+    <div class="container kakomi-box3">
+        <div class="row">
+            <div class="col">
+                Name:<br>
+                Role:<br>
+                University:<br>
+                Major:<br>
             </div>
-        </div>
-        <div class="col">
-            Name:<br>
-        </div>
-    </div>
-</div>
-<div class="container kakomi-box3">
-    <div class="row">
-        <div class="col">
-            Name:<br>
-        </div>
-        <div class="col">
-            <div class="indvidual_photo">
-                <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+            <div class="col">
+                <div class="indvidual_photo">
+                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+                </div>
             </div>
         </div>
     </div>
-</div>
+    <div class="container kakomi-box3">
+        <div class="row">
+            <div class="col">
+                <div class="indvidual_photo">
+                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+                </div>
+            </div>
+            <div class="col">
+                Name:<br>
+                Role:<br>
+                University:<br>
+                Major:<br>
+            </div>
+        </div>
+    </div>
+    <div class="container kakomi-box3">
+        <div class="row">
+            <div class="col">
+                Name:<br>
+                Role:<br>
+                University:<br>
+                Major:<br>
+            </div>
+            <div class="col">
+                <div class="indvidual_photo">
+                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+    <h1>Instructers</h1>
+    <div class="container kakomi-box3">
+        <div class="row">
+            <div class="col">
+                <div class="indvidual_photo">
+                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+                </div>
+            </div>
+            <div class="col">
+                Name:<br>
+            </div>
+        </div>
+    </div>
+    <div class="container kakomi-box3">
+        <div class="row">
+            <div class="col">
+                Name:<br>
+            </div>
+            <div class="col">
+                <div class="indvidual_photo">
+                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div id="footer"></div>
+
 </html>
