--- a/design.html
+++ b/design.html
@@ -67,8 +67,8 @@
     <aside id="sub-area">
         <nav id="g-nav">
             <ul id="g-navi">
-                <li><a href="#area-1">Aptamer</a></li>
-                <li><a href="#area-2">Signal</a></li>
+                <li><a href="#area-1">Concept</a></li>
+                <li><a href="#area-2">Sensor</a></li>
                 <li><a href="#area-3">Amplification</a></li>
             </ul>
         </nav>
