--- a/team.html
+++ b/team.html
@@ -37,7 +37,7 @@
                 Name: Miki Kariya<br>
                 Role: Leader, Robot design<br>
                 University: Nara Institute of Science and Technology<br>
-                Major:<br>
+                Major: Graduate School of Science and Technology<br>
             </div>
         </div>
     </div>
@@ -60,14 +60,14 @@
         <div class="row">
             <div class="col">
                 <div class="indvidual_photo">
-                    <img src="images/yp_aptamer_noaxis.png" class="img-fluid">
+                    <img src="images/photo_ochi-san.jpg" class="img-fluid">
                 </div>
             </div>
             <div class="col">
-                Name:<br>
-                Role:<br>
-                University:<br>
-                Major:<br>
+                Name: Yosuke Ochi<br>
+                Role: Simulation, YouTube<br>
+                University: Kyushu Institute of Technology<br>
+                Major: Bioscience and Bioinformatics<br>
             </div>
         </div>
     </div>
