--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
                 Name: Takumi Nishida<br>
                 Role:Experiment<br>
                 University:Kansai University<br>
-                Major:<br>
+                Major: Faculty of Chemistry, Materials and Bioengineering<br>
             </div>
             <div class="col">
                 <div class="indvidual_photo">
