--- a/design.html
+++ b/design.html
@@ -45,31 +45,53 @@
         <section class="scroll-point" id="area-1">
             <h2>Concept</h2>
             <p>This page describes our molecular robot, "Quorum Hacker," which inhibits quorum sensing and prevents biofilm formation. </p>
-            <p>"Quorum Hacker'' consists of a giant ​​unilamellar vesicles (GUVs) as the basic framework, a sensor part consists of DNA aptamers and a DNA-based transmembrane signalling system, a processor part consists of a circuit for detecting the concentration of quormone, and a circuit for amplifying the DNA aptamers used for quorum sensing inhibition, and an actuator part consists of the mechanism triggered by the DNA signal, which induces membrane fusion of the encapsulated liposome and GUVs. </p>
-            <p>"Quorum Hacker" releases the DNA aptamer through the pore formed on the surface of the GUVs by membrane fusion to inhibit quorum sensing among biofilm-forming bacteria.</p>
+               "Quorum Hacker'' consists of a giant ​​unilamellar vesicles (GUVs) as the basic framework, a sensor part consists of DNA aptamers and a DNA-based transmembrane signalling system, a processor part consists of a circuit for detecting the concentration of quormone, and a circuit for amplifying the DNA aptamers used for quorum sensing inhibition, and an actuator part consists of the mechanism triggered by the DNA signal, which induces membrane fusion of the encapsulated liposome and GUVs. <br>
+               "Quorum Hacker" releases the DNA aptamer through the pore formed on the surface of the GUVs by membrane fusion to inhibit quorum sensing among biofilm-forming bacteria.</p>
         </section>
         <section class="scroll-point" id="area-2">
             <h2>Sensor</h2>
             <p>The sensor part of “Quorum Hacker” is composed of three parts described below.</p>
-            <p>DNA aptamer which detects C4-HSL (quormone)</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+            <p>1. DNA aptamer which detects C4-HSL (quormone)<sup>1)</sup></p>
+            <p>2. DNA-based transmembrane signaling system<sup>2)</sup></p>
+            <p>3. DNA-converter which releases Output 2 in accordance of Input 1 (the output of DNA-based transmembrane signaling system)</p>
+            <p>When the DNA aptamer detects the quormone, Output 1 is released as a signal, and two transmembrane DNA strands on the giant vesicle (complementary DNA to the respective left and right ends of Output1) are connected via Output 1.<br>
+               Inside the transmembrane signalling system across the lipid bilayer, a strand displacement reaction of Input 1 triggered by complexation of the transmission mechanism releases a short DNA strand of about 30 bases as Output 2. Output 2 activates the processor part.</p>
         </section>
         <section class="scroll-point" id="area-3">
-            <h2>Amplification</h2>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
-            <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>            </section>
+            <h2>Processor</h2>
+            <p>The processor part of “Quorum Hacker” is composed of two DNA circuits described below.</p>
+            <p>1. Quormone concentration detection circuit<sup>3)</sup></p>
+            <p>2. DNA amplification circuit which produces DNA aptamer<sup>3)</sup></p>
+            <p>The concentration detection circuit modifies the end of Output 2 released by the sensor part, and DNA amplification is withheld until a certain threshold is exceeded. When the amount of Output 2 exceeds the threshold, the concentration detection circuit overflows, which activates the DNA amplification circuit, and the mass synthesis of aptamers initiates.</p>
+        </section>
+        <section class="scroll-point" id="area-4">
+            <h2>Actuator</h2>
+            <p>The actuator part of “Quorum Hacker” is composed of three parts described below.</p>
+            <p>1. PEG-DNA complex shield which prevents the membrane fusion<sup>4)</sup></p>
+            <p>2. pore formation peptide Magainin 2 which creates the pore for releasing DNA Aptamer<sup>5)</sup></p>
+            <p>3. small liposome composed of part 1 and part 2</p>
+            <p>The PEG-DNA complex shield modified on the liposome is degraded by strand displacement reaction upon recognition of Output 2, allowing the liposome to fuse with the outer GUVs by diffusion.<br>
+                Membrane fusion introduces a pore formed by Magainin 2 on the liposome in advance into the GUVs, and aptamers are released outside through the pore.<br>
+                The aptamers released to the environment bind with quormone and inhibit quorum sensing, which leads to the prevention of biofilm formation.</p>
+        </section>
+        <section class="scroll-point" id="area-5">
+            <h2>Supplements</h2>
+            <li>1) M. Zhao, <i>et al. PLoS ONE</i> 2019, <i>14(2)</i>, e0212041.</li>
+            <li>2) G. Liu, <i>et al. Anal. Chem.</i> 2021, <i>93</i>, 13807-13814.</li>
+            <li>3) M. Z. Gines, <i>et al. Nat. Commun.</i> 2016, <i>7</i>, 13474.</li>
+            <li>4) C. Z. Wang, <i>et al. Nat. Chem. Biol.</i> 2018, <i>14</i>, 86-93.</li>
+            <li>5) Y. Tamba, <i>et al. J. Phys. Chem. B</i> 2010, <i>114</i>, 12018-12026.</li>
+        </section>
+        
     </main>
     <aside id="sub-area">
         <nav id="g-nav">
             <ul id="g-navi">
                 <li><a href="#area-1">Concept</a></li>
                 <li><a href="#area-2">Sensor</a></li>
-                <li><a href="#area-3">Amplification</a></li>
+                <li><a href="#area-3">Processor</a></li>
+                <li><a href="#area-4">Actuator</a></li>
+                <li><a href="#area-5">Supplements</a></li>
             </ul>
         </nav>
     </aside>
