--- a/design.html
+++ b/design.html
@@ -76,6 +76,10 @@
         </section>
         <section class="scroll-point" id="area-5">
             <h2>Supplements</h2>
+            <p>The sensor for "Quorum Hacker" presented here is a DNA aptamer<sup>1)</sup> that has been reported to bind with C4-HSL, a quorumone released by Pseudomonas aeruginosa, which is known to form biofilms. Although the membrane fusion mechanism was not tested or simulated during the period, it is highly feasible because previous reports of the semipermeable property shown with Magainin-2 have confirmed that a polymer as large as 32 nt ssDNA can permeate through the membrane. In addition, the use of lipid molecules such as DOPE and cationic lipids, which promotes membrane fusion, would enable to construction of a system suitable for membrane fusion.</p>
+        </section>
+        <section class="scroll-point" id="area-5">
+            <h2>References</h2>
             <li>1) M. Zhao, <i>et al. PLoS ONE</i> 2019, <i>14(2)</i>, e0212041.</li>
             <li>2) G. Liu, <i>et al. Anal. Chem.</i> 2021, <i>93</i>, 13807-13814.</li>
             <li>3) M. Z. Gines, <i>et al. Nat. Commun.</i> 2016, <i>7</i>, 13474.</li>
