--- a/experiment.html
+++ b/experiment.html
@@ -59,11 +59,14 @@
                 <h4>【Method】</h4>
                 <p>The hybridization buffer was prepared using 10 × PBS (-), 4M MgCl<sub>2</sub>, and sterile water in the following amount.<sup>1)</sup> Note that the 10 × PBS (-) used in this experiment already contains more than 100mM NaCl, so the 1mM NaCl described in the paper<sup>1)</sup> was not used. On the other hand, for Mg<sup>2+</sup>, the preparation was performed to match the ratio. After preparation, the pH was checked.</p>
                 <h4>・Preparation amount</h4>
-                <table width="40%">
-                    <tr><td>10 × PBS (−)</td><td>1mL</td></tr>
-                    <tr><td>4M MgCl<sub>2</sub></td><td>10mL</td></tr>
-                    <tr><td>Water</td><td>89mL</td></tr>
-                    <tr><td>Total</td><td>100mL</td></tr>
+                
+                <table class="element">
+                    <tr><td>10 × PBS (−)</td><td><div class="volume">1mL</div></td></tr>
+                    <tr><td>4M MgCl<sub>2</sub></td><td><div class="volume">10mL</div></td></tr>
+                    <tr><td>Water</td><td><div class="volume">89mL</div></td></tr>
+                </table>
+                <table>
+                    <tr><td>Total</td><td><div class="volume">100mL</div></td></tr>
                 </table>
         </section>
         <section class="scroll-point" id="area-3">
@@ -72,16 +75,20 @@
                 <p>First, DNA Aptamer (Pool<sub>99</sub>) and Output1 were prepared to 1200nM with hybridization buffer. After preparation, DNA Aptamer (Pool<sub>99</sub>) (20 μL) was denatured at 95˚C for 5 min and cooled to 4˚C using a PCR thermal cycler. DNA Aptamer (Pool<sub>99</sub>) (20 μL) and Output1 (20 μL) were then mixed in a 1 : 1 ratio, and the sample was set in a PCR thermal cycler at 53˚C for 30 min, followed by 48˚C for at least 4 hr. The mixture was then held at 43˚C for 30 min and 38 ˚C for 4 hr.<sup>1)</sup></p>
                 <h4>・Preparation amount</h4>
                 <p>C4-HSL Aptamer (99bp)</p>
-                <table width="40%">
-                    <tr><td>C4-HSL Aptamer</td><td>0.48μL</td></tr>
-                    <tr><td>Hybridization buffer</td><td>39.52μL</td></tr>
-                    <tr><td>Total</td><td>40μL (1200nM)</td></tr>
+                <table class="element">
+                    <tr><td>C4-HSL Aptamer</td><td><div class="volume">0.48μL</div></td></tr>
+                    <tr><td>Hybridization buffer</td><td><div class="volume">39.52μL</div></td></tr>
+                </table>
+                <table>
+                    <tr><td>Total</td><td><div class="volume">40μL (1200nM)</div></td></tr>
                 </table>
                 <p>Output1 (C50, 32bp)</p>
-                <table width="40%">
-                    <tr><td>C50</td><td>0.48μL</td></tr>
-                    <tr><td>Hybridization buffer</td><td>39.52μL</td></tr>
-                    <tr><td>Total</td><td>40μL (1200nM)</td></tr>
+                <table class="element">
+                    <tr><td>C50</td><td><div class="volume"></div>0.48μL</div></td></tr>
+                    <tr><td>Hybridization buffer</td><td><div class="volume"></div>39.52μL</div></td></tr>
+                </table>
+                <table>
+                    <tr><td>Total</td><td><div class="volume">40μL (1200nM)</div></td></tr>
                 </table>
         </section>
         <section class="scroll-point" id="area-4">
@@ -92,11 +99,11 @@
                     <h4>【Experimental Procedure】</h4>
                     <p>First, polyacrylamide gels were prepared by mixing 10W/ V. % Acrylamide Bis Mixed Solution (29 : 1), 1 × TAE/ Mg<sup>2+</sup> buffer and initiator (APS + TEMED) in the following preparation amounts. Then, electrophoresis was performed at 150V, 15mA, 35min.</p>
                     <h4>・Preparation amount</h4>
-                    <table width="40%">
-                        <tr><td>10W/ V. % Acrylamide Bis Mixed Solution (29 : 1)	</td><td>10mL</td></tr>
+                    <table>
+                        <tr><td>10W/ V. % Acrylamide Bis Mixed Solution (29 : 1)</td><td>10mL</td></tr>
                         <tr><td>APS</td><td>100μL</td></tr>
                         <tr><td>TEMED</td><td>10μL</td></tr>
-                </table>
+                    </table>
                     <h4>【Results and Discussion】</h4>
                     <p>The results of Experiment 3-1 are shown in Fig.1</p>
                     <img src="images/experimentFig.1.png">
